--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="StepCargo"
 APP_ENV=local
 APP_KEY=base64:WrvqXJ+ilWOLItqI7C2N2R2dQkqFAHFYzTrQBBJqtso=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL="http://localhost:8080/old/install"
 APP_TIMEZONE="UTC"
 
